--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@ target/
 *.iws
 *.iml
 *.ipr
-application.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -30,5 +29,5 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
-.vscode/
+application.properties
+.DS_Store
